bug fix on mobile navbar hamburger

--- a/TripleHelixProject/src/main/resources/static/styles/backoffice/backoffice.css
+++ b/TripleHelixProject/src/main/resources/static/styles/backoffice/backoffice.css
@@ -270,7 +270,7 @@ main nav {
   }
 
   .container {
-    width: 80vw;
+    width: 70vw;
     margin-left: 25vw;
     margin-top: 10vh;
     padding: 0;
